--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 <head>
@@ -12,6 +12,17 @@
 </head>
 
 <body>
+    <header>
+        <div id="logo"> <img src="C:\Users\austi\Documents\LambdaSprints\web-Sprint-Challenge-User-Interface-and-Git\img\lambda-black.png" altId="Lambda logo"/></div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="">Products</a>
+            <a href="">Blog</a>
+            <a href="">Contact</a>
+        </nav>
+        <img id="large" src="C:\Users\austi\Documents\LambdaSprints\web-Sprint-Challenge-User-Interface-and-Git\img\jumbo.jpg"/>
+    </header>
     <div class="container">
    
         <section class="top-content">
