--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div id="logo"> <img src="C:\Users\austi\Documents\LambdaSprints\web-Sprint-Challenge-User-Interface-and-Git\img\lambda-black.png" altId="Lambda logo" /></div>
+        <div id="logo"> <img src="img\lambda-black.png" altId="Lambda logo" /></div>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -22,7 +22,7 @@
             <a href="">Contact</a>
         </nav>
     </header>
-        <img id="large" src="C:\Users\austi\Documents\LambdaSprints\web-Sprint-Challenge-User-Interface-and-Git\img\jumbo.jpg"/>
+        <img id="large" src="img\jumbo.jpg"/>
     
     <div class="container">
    
